--- a/style.css
+++ b/style.css
@@ -71,3 +71,85 @@ aside, main {
     display: flex;
     justify-content: center;
 }
+
+.card-image {
+    width: 100%;
+    height: 250px;
+    display: block;
+}
+
+.card-content {
+    line-height: 1.5rem;
+    font-size: 0.9rem;
+    padding: 15px;
+    background-color: #fafafa;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+    /* grid-template-columns: repeat(auto-fit, minmax(225px , 1fr)); */
+    grid-template-rows: auto;
+    gap: 30px;
+    padding: 30px 0;
+    width: calc(100% - 6rem);
+    margin: 0 auto;
+
+}
+
+.card {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.burger {
+    display: none;
+}
+
+@media (max-width:768px) {
+    .burger {
+        display: block;
+    }
+
+    .navbar {
+        display: none;
+    }
+
+    .burger span {
+        font-size: 2rem;
+        color: #fff;
+        margin: 5px 0;
+    }
+
+    .header {
+        padding: 0 1rem;
+    }
+
+    .main {
+        margin: 1rem;
+        flex-direction: column-reverse;
+    }
+    aside {
+        width: calc(100% - 2rem);
+        margin-right: 0;
+        height: 200px;
+    }
+
+    main {
+        width: calc(100% - 2rem);
+        margin-bottom: 20px;
+        height: 500px;
+    }
+    
+    .cards {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+@media (min-width:769px) and (max-width: 1200px) {
+    .cards {
+        grid-template-columns: 1fr 1fr;
+        gap: 50px;
+    }
+}
+
